--- a/Data_generator/Data_generator/Data_generator.vcxproj
+++ b/Data_generator/Data_generator/Data_generator.vcxproj
@@ -23,6 +23,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>Data_generator</RootNamespace>
+    <ProjectName>Data_generator</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
