--- a/QtDataGenerator/QtDataGenerator/QtDataGenerator.vcxproj
+++ b/QtDataGenerator/QtDataGenerator/QtDataGenerator.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Calibrate.cpp" />
     <ClCompile Include="CVImageWidget.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_CVImageWidget.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -165,6 +166,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyImage.cpp" />
     <ClCompile Include="qtdatagenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -208,6 +210,8 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Calibrate.h" />
+    <ClInclude Include="MyImage.h" />
     <CustomBuild Include="CVImageWidget.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing CVImageWidget.h...</Message>
