--- a/GridFace/GridFace/GridFace.vcxproj.filters
+++ b/GridFace/GridFace/GridFace.vcxproj.filters
@@ -33,9 +33,6 @@
       <Extensions>cpp;moc</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
-    <Filter Include="Wild_landmarks">
-      <UniqueIdentifier>{bb8141d8-c0d5-4755-884b-156059a61584}</UniqueIdentifier>
-    </Filter>
     <Filter Include="SVM_landmarks">
       <UniqueIdentifier>{68741c96-c177-4596-b111-0609c3ca45b5}</UniqueIdentifier>
     </Filter>
@@ -64,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="SVM_landmarks\liblbp.cpp">
       <Filter>SVM_landmarks</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\dlib-18.18\dlib\all\source.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
