--- a/GridFace/GridFace/GridFace.vcxproj.filters
+++ b/GridFace/GridFace/GridFace.vcxproj.filters
@@ -110,6 +110,9 @@
     <None Include="w2c.yml">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="color_data.yml">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="opencv\haarcascade_eye.xml">
